// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change finish icon when using finish-icon prop 1`] = `
<div class="r-hairline r-step r-step--horizontal r-step--finish">
  <div class="r-step__title">
    A
  </div>
  <div class="r-step__circle-container">
    <i class="r-badge__wrapper r-icon r-step__icon r-step__icon--finish">
    </i>
  </div>
  <div class="r-step__line">
  </div>
</div>
`;

exports[`should change inactive color when using inactive-color prop 1`] = `
<div class="r-steps r-steps--horizontal">
  <div class="r-steps__items">
    <div class="r-hairline r-step r-step--horizontal r-step--process">
      <div class="r-step__title r-step__title--active">
        A
      </div>
      <div class="r-step__circle-container">
        <i class="r-badge__wrapper r-icon r-step__icon r-step__icon--active">
        </i>
      </div>
      <div class="r-step__line"
           style="background: red;"
      >
      </div>
    </div>
    <div class="r-hairline r-step r-step--horizontal r-step--waiting">
      <div class="r-step__title"
           style="color: red;"
      >
        B
      </div>
      <div class="r-step__circle-container">
        <i class="r-step__circle"
           style="background: red;"
        >
        </i>
      </div>
      <div class="r-step__line"
           style="background: red;"
      >
      </div>
    </div>
  </div>
</div>
`;

exports[`should change inactive icon when using inactive-icon prop 1`] = `
<div class="r-hairline r-step r-step--horizontal r-step--waiting">
  <div class="r-step__title">
    B
  </div>
  <div class="r-step__circle-container">
    <i class="r-badge__wrapper r-icon r-step__icon">
    </i>
  </div>
  <div class="r-step__line">
  </div>
</div>
`;

exports[`should render finish icon slot correctly 1`] = `
<div class="r-hairline r-step r-step--horizontal r-step--finish">
  <div class="r-step__title">
    A
  </div>
  <div class="r-step__circle-container">
    Custom Finish Icon
  </div>
  <div class="r-step__line">
  </div>
</div>
`;

exports[`should render icon slot correctly 1`] = `
<div class="r-steps r-steps--horizontal">
  <div class="r-steps__items">
    <div class="r-hairline r-step r-step--horizontal r-step--process">
      <div class="r-step__title r-step__title--active">
        B
      </div>
      <div class="r-step__circle-container">
        Custom Active Icon
      </div>
      <div class="r-step__line">
      </div>
    </div>
    <div class="r-hairline r-step r-step--horizontal r-step--waiting">
      <div class="r-step__title">
        A
      </div>
      <div class="r-step__circle-container">
        Custom Inactive Icon
      </div>
      <div class="r-step__line">
      </div>
    </div>
  </div>
</div>
`;

exports[`should render icon-prefix correctly 1`] = `
<div class="r-hairline r-step r-step--horizontal r-step--process">
  <div class="r-step__title r-step__title--active">
    B
  </div>
  <div class="r-step__circle-container">
    <i class="r-badge__wrapper custom-icon r-step__icon r-step__icon--active">
    </i>
  </div>
  <div class="r-step__line">
  </div>
</div>
`;
